--- a/app/index.pug
+++ b/app/index.pug
@@ -1,15 +1,8 @@
-doctype html
-html(lang="en")
-  head
-    meta(charset="UTF-8")
-    meta(http-equiv="X-UA-Compatible", content="IE=edge")
-    meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    title Flows
-    link(rel="stylesheet", href="css/libs.min.css")
-    link(rel="stylesheet", href="css/style.min.css") 
+include includes/head.pug
 
   body
-    
+    .header
+      | dsagfdsg
 
     script(src="js/libs.min.js")
     script(src="js/main.js")
