--- a/app/index.pug
+++ b/app/index.pug
@@ -1,8 +1,9 @@
-include includes/head.pug
+doctype html
+html(lang="en")
+
+  include includes/head.pug
 
   body
-    .header
-      | dsagfdsg
+    
 
-    script(src="js/libs.min.js")
-    script(src="js/main.js")
+  include includes/scripts.pug
