fixed gulp settings

--- a/app/index.pug
+++ b/app/index.pug
@@ -4,6 +4,9 @@ html(lang="en")
   include includes/head.pug
 
   body
+    header.header 
+      .header__inner
+        
     
 
   include includes/scripts.pug
