--- a/app/stylus/_vars.styl
+++ b/app/stylus/_vars.styl
@@ -1,13 +1,14 @@
-// main
-white = #fff
-black = #414141
-grey = #808080
-placeholder = #959595
-blue = #2E3DBE
-red = #E15554
-orange = #ff9000
-link = #45688f
+// main colors
+$white = #fff
+$black = #414141
+$bg = #0E0F10
+$grey = #808080
+$placeholder = #959595
+$blue = #2E3DBE
+$red = #E15554
+$orange = #ff9000
+$link = #45688f
 
 // hover
-orangeHover = #FFA42E
-linkHover = #6683A3
+$orangeHover = #FFA42E
+$linkHover = #6683A3
