added intro section

--- a/app/stylus/_vars.styl
+++ b/app/stylus/_vars.styl
@@ -8,7 +8,9 @@ $blue = #2E3DBE
 $red = #E15554
 $orange = #ff9000
 $link = #45688f
+$text = rgba(255, 255, 255, 0.5)
+$greenBtn = #00A99C
 
 // hover
-$orangeHover = #FFA42E
+$greenBtnHover = #059185
 $linkHover = #6683A3
