--- a/app/stylus/_global.styl
+++ b/app/stylus/_global.styl
@@ -24,6 +24,7 @@ body
   font-weight 400
   background-color $bg
   color $white
+  overflow-x hidden
 
 a
   display inline-block
@@ -80,6 +81,12 @@ button
 
   &:focus-visible
     box-shadow 0px 0px 6px 2px rgba(0, 0, 0, 0.3)
+
+.container
+  max-width 1020px
+  margin 0 auto
+  padding 0 3rem
+  
   
 .button
   background-color $orange
