--- a/app/stylus/style.styl
+++ b/app/stylus/style.styl
@@ -1,6 +1,73 @@
 @import '_vars'
 @import '_global'
- 
+@import '../includes/modules/circles/index'
+@import '../includes/modules/green-button/index'
 
+.intro
+  background-color rgba(23, 25, 27, 0.6)
+  box-shadow 0px 40px 60px rgba(0, 0, 0, 0.4)
+  backdrop-filter blur(16px)
+  border-radius 0% 0% 60% 60%/0% 0% 20% 20%
+
+  &__inner
+    padding 9rem 0 7rem
+    text-align center
+
+  &__title
+    font-size 5.2rem
+    line-height 2
+    font-weight 900
+    color $text
+    margin-bottom 6rem
+
+    span
+      &:nth-child(1)
+        display inline-block
+        position relative
+        margin-right .6rem
+
+        &::before
+          position absolute
+          content ''
+          bottom .6rem
+          background-color $orange
+          border-radius 0px 0px 11.7491px 11.7491px
+          width 100%
+          height .7rem
+
+      &:nth-child(2)
+        border 1px dashed $linkHover
+        padding .5rem 1rem
+
+  &__message
+    font-weight 100
+    font-size 2.8rem
+    line-height 3.3rem
+    color $text
+    margin-bottom 5.5rem
+
+    span
+      color $white
+
+  &__form
+    max-width 310px
+    margin 0 auto 5.6rem
+
+  &__input
+    width 100%
+    background rgba(0, 0, 0, 0.2)
+    box-shadow inset 0px 2px 0px rgba(0, 0, 0, 0.2)
+    border-radius 16px
+    padding 2rem 2.4rem
+    font-weight 400
+    font-size 14px
+    line-height 16px
+    color $white
+    outline none
+    border none
+    margin-bottom 16px
+
+    &::placeholder
+      color $text
 
 @import '_media'
