added pictures block

--- a/app/includes/modules/circles/index.styl
+++ b/app/includes/modules/circles/index.styl
@@ -9,7 +9,7 @@
   width 70rem
   height 70rem
   background radial-gradient(50% 50% at 50% 50%, rgba(255, 255, 255, 0.2) 0%, rgba(0, 169, 156, 0) 100%)
-  z-index 1
+  z-index 3
 
   &--green
     background radial-gradient(50% 50% at 50% 50%, rgba(0, 169, 156, 0.2) 0%, rgba(0, 169, 156, 0) 100%)
@@ -27,3 +27,8 @@
   &--two
     top -320px
     right -210px
+
+  &--three
+    top 1050px
+    left 50%
+    transform translateX(-50%)
