added features block, added circles, fixed code

--- a/app/stylus/_global.styl
+++ b/app/stylus/_global.styl
@@ -24,7 +24,7 @@ body
   font-weight 400
   background-color $bg
   color $white
-  overflow-x hidden
+  overflow hidden
 
 a
   display inline-block
