--- a/app/includes/modules/button/index.styl
+++ b/app/includes/modules/button/index.styl
@@ -1,4 +1,6 @@
 .green-button
+  display inline-flex
+  align-items center
   font-weight 500
   font-size 14px
   line-height 1.5
@@ -7,6 +9,7 @@
   box-shadow 0px 2px 0px #006C65, 0px 8px 40px rgba(0, 169, 156, 0.1)
   border-radius 16px
   transition all .1s
+  color $white !important
 
   &:hover
     background-color $greenBtnHover
@@ -14,6 +17,9 @@
   &:active
     box-shadow none
     transform translateY(2px)
+
+  svg
+    margin-right 1.4rem
 
 .intro__invest
   .invest-button
@@ -30,6 +36,7 @@
 
     svg
       margin-left 1.2rem
+      margin-right 0
 
     &:hover
       background-color $orange
