--- a/app/includes/modules/circles/index.styl
+++ b/app/includes/modules/circles/index.styl
@@ -1,8 +1,11 @@
 .circles
+  position absolute
+  left 0
+  right 0
+  margin 0 auto
+  max-width 1200px
   width 100%
   height 500px
-  position absolute
-  overflow-x hidden
 
 .circle
   position absolute
@@ -32,3 +35,20 @@
     top 1050px
     left 50%
     transform translateX(-50%)
+    z-index -1
+
+  &--four
+    top 26%
+    right 0
+    z-index -1
+  
+  &--five
+    top 51%
+    left 0
+    z-index -1
+
+  &--six
+    top 77%
+    left 50%
+    transform translateX(-50%)
+    z-index -1
