--- a/app/includes/modules/circles/index.styl
+++ b/app/includes/modules/circles/index.styl
@@ -38,13 +38,13 @@
     z-index -1
 
   &--four
-    top 26%
-    right 0
+    top 29%
+    right -40%
     z-index -1
   
   &--five
     top 51%
-    left 0
+    left -34%
     z-index -1
 
   &--six
