--- a/app/stylus/style.styl
+++ b/app/stylus/style.styl
@@ -4,12 +4,75 @@
 @import '../includes/modules/button/index'
 @import '../includes/modules/picture/index'
 
+.header
+  position fixed
+  top -80px
+  width 100%
+  background linear-gradient(0deg, rgba(25, 24, 39, 0.7), rgba(25, 24, 39, 0.7)), linear-gradient(90.31deg, rgba(0, 169, 156, 0.2) -17.82%, rgba(231, 155, 55, 0.2) 112.82%)
+  box-shadow 0px 40px 60px rgba(0, 0, 0, 0.4)
+  backdrop-filter blur(16px)
+  border-radius 0 0 500px 500px/0 0 20px 20px
+  transition all .3s
+  z-index 10
+
+  &__inner
+    display flex
+    align-items center
+    justify-content space-between
+
+  &__menu
+    ul
+      display flex
+      align-items center
+
+      li
+        &:first-child
+          a
+            &::after
+              transform rotate(1deg)
+              bottom 2.4px
+
+        &:last-child
+          a
+            &::after
+              transform rotate(-1deg)
+              bottom 2.5px
+
+        a
+          position relative
+          color $text
+          font-weight 300
+          font-size 14px
+          line-height 16px
+          padding 3.2rem 1.2rem
+
+          &::after
+            position absolute
+            content ''
+            bottom 2px
+            right 0
+            height 2px
+            width 0
+            background-color $white
+            box-shadow 0px 13px 32px $white
+            transition width .3s
+
+          &:hover
+            color $orange
+
+            &::after
+              width 100%
+              left 0
+            
+        .header__menu--white
+          color $white
+
 .intro
   position relative
   background-color rgba(23, 25, 27, 0.6)
   box-shadow 0px 40px 60px rgba(0, 0, 0, 0.4)
   backdrop-filter blur(7px)
-  border-radius 0% 0% 60% 60%/0% 0% 20% 20%
+  border-radius 0px 0px 1000px 1000px/0px 0px 80px 80px
   z-index 2
   margin-bottom 5rem
 
@@ -117,8 +180,10 @@
         max-width 187px
 
 .features
-  position relative
   margin-top -100px
+
+  &__inner
+    position relative
 
   &__title
     font-weight 100
