added animation on Flows h1

--- a/app/index.pug
+++ b/app/index.pug
@@ -33,7 +33,7 @@ block main
       .header__inner
         .header__logo
           a(href="#")
-            img(src="img/logo.svg", alt="Logo")
+            img(src= images + "logo.svg", alt="Logo")
 
         nav.header__menu
           ul
