--- a/app/stylus/_global.styl
+++ b/app/stylus/_global.styl
@@ -100,5 +100,14 @@ button
   &:hover
     background-color $orangeHover
 
-  &:disabled
-    // background-color $placeholder
+  // &:disabled
+   // background-color $placeholder
+
+@keyframes animateWidth {
+  from {
+    width 0
+  }
+  to {
+    width 100%
+  }
+}
