--- a/app/stylus/style.styl
+++ b/app/stylus/style.styl
@@ -99,8 +99,8 @@
           bottom .6rem
           background-color $orange
           border-radius 0px 0px 11.7491px 11.7491px
-          width 100%
           height .7rem
+          animation animateWidth 1s 1.3s forwards
 
       &:nth-child(2)
         border 1px dashed $linkHover
